@@ -23,7 +23,7 @@
 			w = "(if(width - {GROOVE_LEFT} - {GROOVE_RIGHT} < 0
 					, 0, width - {GROOVE_LEFT} - {GROOVE_RIGHT}))"
 			h = 0
-			stretch = true
+			resize_mode = "stretch"
 			name = "buttons/scrollgroove{IMAGE_MIDDLE}-horizontal.png"
 		[/image]
 
@@ -51,7 +51,7 @@
 			w = "(
 if(positioner_length - {POSITIONER_LEFT} - {POSITIONER_RIGHT} < 0
 		, 0, positioner_length - {POSITIONER_LEFT} - {POSITIONER_RIGHT}))"
-			stretch = true
+			resize_mode = "stretch"
 			name = "buttons/scrollhorizontal{IMAGE_MIDDLE}{IMAGE_SUFFIX}"
 		[/image]
 
