@@ -36,7 +36,7 @@
 					x = {OFFSET_SIDE_1}
 					y = 0
 					w = "(if(width < {OFFSET_TOTAL}, 0, width - {OFFSET_TOTAL}))"
-					stretch = "true"
+					resize_mode = "stretch"
 					name = "dialogs/translucent54-border-top.png"
 				[/image]
 
@@ -50,7 +50,7 @@
 					x = "(width - {OFFSET_SIDE_2})"
 					y = {OFFSET_SIDE_1}
 					h = "(if(height < {OFFSET_TOTAL}, 0, height - {OFFSET_TOTAL}))"
-					stretch = "true"
+					resize_mode = "stretch"
 					name = "dialogs/translucent54-border-right.png"
 				[/image]
 
@@ -64,7 +64,7 @@
 					x = {OFFSET_SIDE_1}
 					y = "(height - {OFFSET_SIDE_2})"
 					w = "(if(width < {OFFSET_TOTAL}, 0, width - {OFFSET_TOTAL}))"
-					stretch = "true"
+					resize_mode = "stretch"
 					name = "dialogs/translucent54-border-bottom.png"
 				[/image]
 
@@ -78,7 +78,7 @@
 					x = 0
 					y = {OFFSET_SIDE_1}
 					h = "(if(height < {OFFSET_TOTAL}, 0, height - {OFFSET_TOTAL}))"
-					stretch = "true"
+					resize_mode = "stretch"
 					name = "dialogs/translucent54-border-left.png"
 				[/image]
 
