@@ -24,7 +24,7 @@
 					x = 0
 					y = 0
 					w = "(width)"
-					stretch = "true"
+					resize_mode = "stretch"
 					name = "dialogs/" +  {_GUI_BASE_NAME} + "-border-top.png"
 				[/image]
 
@@ -32,7 +32,7 @@
 					x = 0
 					y = "(height - {OFFSET_SIDE_2})"
 					w = "(width)"
-					stretch = "true"
+					resize_mode = "stretch"
 					name = "dialogs/" +  {_GUI_BASE_NAME} + "-border-bottom.png"
 				[/image]
 
