@@ -22,7 +22,7 @@
 			y = {GROOVE_TOP}
 			h = "(if(height - {GROOVE_TOP} - {GROOVE_BOTTOM} < 0
 					, 0, height - {GROOVE_TOP} - {GROOVE_BOTTOM}))"
-			stretch = true
+			resize_mode = "stretch"
 			name = "buttons/scrollgroove{IMAGE_MIDDLE}-mid.png"
 		[/image]
 
@@ -50,7 +50,7 @@
 			h = "(
 if(positioner_length - {POSITIONER_TOP} - {POSITIONER_BOTTOM} < 0
 	, 0, positioner_length - {POSITIONER_TOP} - {POSITIONER_BOTTOM}))"
-			stretch = true
+			resize_mode = "stretch"
 			name = "buttons/scrollmid{IMAGE_MIDDLE}{IMAGE_SUFFIX}"
 		[/image]
 
